--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-DUNGEON -- AN ASCII ROGUELIKE CREATED BY JACOB SEADORF
+# DUNGEON -- AN ASCII ROGUELIKE CREATED BY JACOB SEADORF
 
 DUNGEON is inspired by Dungeon Crawl Stone Soup, Nethack, Dungeons and Dragons, as well as the original Rogue. 
 The player ('@') is controllable with the arrow keys, and several other keys, listed here.
